crates/biome_module_graph/tests/snapshots/test_resolve_dual_types.snap
---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---
# `/src/index.ts`

## Source

```ts
type A = "a";
type B = "b";
type C = "c";
export type Union = A | B | C;

const A = "a";
const B = 1;
const C = true;

export type Union2 = typeof A | typeof B | typeof C;

export { A, B };
```

## Module Info

```
Exports {
  "A" => {
    ExportOwnExport => JsOwnExport(
      Module(0) TypeId(13)
      Local name: A
    )
  }
  "B" => {
    ExportOwnExport => JsOwnExport(
      Module(0) TypeId(14)
      Local name: B
    )
  }
  "Union" => {
    ExportOwnExport => JsOwnExport(
      Module(0) TypeId(6)
      Local name: Union
    )
  }
  "Union2" => {
    ExportOwnExport => JsOwnExport(
      Module(0) TypeId(12)
      Local name: Union2
    )
  }
}
Imports {
  No imports
}
```

## Registered types

```
Module TypeId(0) => value: a

Module TypeId(1) => value: b

Module TypeId(2) => value: c

Module TypeId(3) => value: a

Module TypeId(4) => value: b

Module TypeId(5) => value: c

Module TypeId(6) => Module(0) TypeId(3) | Module(0) TypeId(4) | Module(0) TypeId(5)

Module TypeId(7) => value: 1

Module TypeId(8) => value: true

Module TypeId(9) => value: a

Module TypeId(10) => value: 1

Module TypeId(11) => value: true

Module TypeId(12) => Module(0) TypeId(9) | Module(0) TypeId(10) | Module(0) TypeId(11)

Module TypeId(13) => value: a

Module TypeId(14) => (type: Module(0) TypeId(1), value: Module(0) TypeId(7))
```
