crates/biome_module_graph/tests/snapshots/test_resolve_import_as_namespace.snap
---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `/src/foo.ts` (Module 1)

## Source

```ts
export function foo(): number {
	return 1;
}
```

## Module Info

```
Exports {
  "foo" => {
    ExportOwnExport => JsOwnExport::Binding(25..28)
  }
}
Imports {
  No imports
}
```

## Exported Bindings

```
foo => BindingTypeData {
  Types Module(0) TypeId(1),
}
```

## Registered types

```
Module TypeId(0) => number: 1

Module TypeId(1) => sync Function "foo" {
  accepts: {
    params: []
    type_args: []
  }
  returns: number
}
```

# `/src/index.ts` (Not imported by resolver)

## Source

```ts
import * as fooNs from "./foo.ts";

const result = fooNs.foo();
```

## Module Info

```
Exports {
  No exports
}
Imports {
  "fooNs" => {
    Specifier: "./foo.ts"
    Resolved path: "/src/foo.ts"
    Import Symbol: All
  }
}
```

## Registered types

```
Module TypeId(0) => Import Symbol: All from "/src/foo.ts"

Module TypeId(1) => Module(0) TypeId(0).foo

Module TypeId(2) => Call Module(0) TypeId(1)(No parameters)
```

# Module Resolver

## Registered types

```
Full TypeId(0) => namespace for ModuleId(1)

Full TypeId(1) => Import TypeId(1)

Full TypeId(2) => sync Function "foo" {
  accepts: {
    params: []
    type_args: []
  }
  returns: number
}

Full TypeId(3) => number
```
