crates/biome_module_graph/tests/snapshots/test_resolve_merged_namespace_with_type.snap
---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
export namespace Foo {
	interface Bar {}
}

export type Foo = Foo.Bar;
```

## Module Info

```
Exports {
  "Foo" => {
    ExportOwnExport => JsOwnExport::Type(Module(0) TypeId(3))
  }
}
Imports {
  No imports
}
```
