crates/biome_module_graph/tests/snapshots/test_resolve_promise_export.snap
---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
async function returnsPromise() {
	return "value";
}

export const promise = returnsPromise();
```

## Module Info

```
Exports {
  "promise" => {
    ExportOwnExport => JsOwnExport::Binding(119..126)
  }
}
Imports {
  No imports
}
```
