crates/biome_module_graph/tests/snapshots/test_resolve_type_of_destructured_field_of_intersection_of_interfaces.snap
---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `/src/index.ts` (Not imported by resolver)

## Source

```ts
type FullConfiguration = InternalConfiguration & PublicConfiguration;

type ScopedMutator<Data = any, T = Data> = (
	key: Arguments,
	data?: T | Promise<T> | MutatorCallback<T>,
	opts?: boolean | MutatorOptions<Data, T>,
) => Promise<T | undefined>;

interface InternalConfiguration {
	cache: Cache;
	mutate: ScopedMutator;
}

interface PublicConfiguration {
	errorRetryInterval: number;
}

declare const useSWRConfig: () => FullConfiguration;

const { mutate } = useSWRConfig();
```

## Module Info

```
Exports {
  No exports
}
Imports {
  No imports
}
```

## Registered types

```
Module TypeId(0) => instanceof Promise<Module(0) TypeId(12)>

Module TypeId(1) => Module(0) TypeId(12) | Module(0) TypeId(0) | Module(0) TypeId(24)

Module TypeId(2) => Module(0) TypeId(1) | undefined

Module TypeId(3) => boolean

Module TypeId(4) => Module(0) TypeId(3) | Module(0) TypeId(24)

Module TypeId(5) => Module(0) TypeId(4) | undefined

Module TypeId(6) => sync Function {
  accepts: {
    params: []
    type_args: []
  }
  returns: Module(0) TypeId(8)
}

Module TypeId(7) => Module(0) TypeId(6)

Module TypeId(8) => interface "(merged)" {
  extends: []
  type_args: []
  members: [
    "cache": Module(0) TypeId(24),
    "mutate": Module(0) TypeId(9),
    "errorRetryInterval": number
  ]
}

Module TypeId(9) => instanceof Module(0) TypeId(20)<Module(0) TypeId(22), Module(0) TypeId(23)>

Module TypeId(10) => interface "InternalConfiguration" {
  extends: []
  type_args: []
  members: ["cache": Module(0) TypeId(24), "mutate": Module(0) TypeId(9)]
}

Module TypeId(11) => interface "PublicConfiguration" {
  extends: []
  type_args: []
  members: ["errorRetryInterval": number]
}

Module TypeId(12) => instanceof Module(0) TypeId(23)

Module TypeId(13) => Module(0) TypeId(12) | Module(0) TypeId(0) | Module(0) TypeId(24)

Module TypeId(14) => Module(0) TypeId(13) | undefined

Module TypeId(15) => instanceof Module(0) TypeId(22)

Module TypeId(16) => Module(0) TypeId(4) | undefined

Module TypeId(17) => undefined

Module TypeId(18) => Module(0) TypeId(12) | Module(0) TypeId(17)

Module TypeId(19) => instanceof Promise<Module(0) TypeId(18)>

Module TypeId(20) => sync Function {
  accepts: {
    params: [
      required key: Module(0) TypeId(24)
      optional data: Module(0) TypeId(14)
      optional opts: Module(0) TypeId(16)
    ]
    type_args: []
  }
  returns: Module(0) TypeId(19)
}

Module TypeId(21) => any

Module TypeId(22) => Data = unknown

Module TypeId(23) => T = unknown

Module TypeId(24) => unknown
```

# Module Resolver

## Registered types

```
Full TypeId(0) => instanceof Promise<Module(0) TypeId(12)>

Full TypeId(1) => Module(0) TypeId(12) | Module(0) TypeId(0) | Module(0) TypeId(24)

Full TypeId(2) => Module(0) TypeId(1) | undefined

Full TypeId(3) => boolean

Full TypeId(4) => Module(0) TypeId(3) | Module(0) TypeId(24)

Full TypeId(5) => Module(0) TypeId(4) | undefined

Full TypeId(6) => sync Function {
  accepts: {
    params: []
    type_args: []
  }
  returns: Module(0) TypeId(8)
}

Full TypeId(7) => Module(0) TypeId(6)

Full TypeId(8) => interface "(merged)" {
  extends: []
  type_args: []
  members: [
    "cache": Module(0) TypeId(24),
    "mutate": Module(0) TypeId(9),
    "errorRetryInterval": number
  ]
}

Full TypeId(9) => instanceof Module(0) TypeId(20)<Module(0) TypeId(22), Module(0) TypeId(23)>

Full TypeId(10) => interface "InternalConfiguration" {
  extends: []
  type_args: []
  members: ["cache": Module(0) TypeId(24), "mutate": Module(0) TypeId(9)]
}

Full TypeId(11) => interface "PublicConfiguration" {
  extends: []
  type_args: []
  members: ["errorRetryInterval": number]
}

Full TypeId(12) => instanceof Module(0) TypeId(23)

Full TypeId(13) => Module(0) TypeId(13) | undefined

Full TypeId(14) => instanceof Module(0) TypeId(22)

Full TypeId(15) => undefined

Full TypeId(16) => Module(0) TypeId(12) | Module(0) TypeId(17)

Full TypeId(17) => instanceof Promise<Module(0) TypeId(18)>

Full TypeId(18) => sync Function {
  accepts: {
    params: [
      required key: Module(0) TypeId(24)
      optional data: Module(0) TypeId(14)
      optional opts: Module(0) TypeId(16)
    ]
    type_args: []
  }
  returns: Module(0) TypeId(19)
}

Full TypeId(19) => any

Full TypeId(20) => Data = unknown

Full TypeId(21) => T = unknown

Full TypeId(22) => unknown
```
