crates/biome_module_graph/tests/snapshots/test_resolve_type_of_property_with_getter.snap
---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
class Foo {
	get foo() {
		if (!this.initialised) {
			this.initialise();
			return "foo";
		}

		return "foo";
	}
}

const fooness = new Foo();
const foo = fooness.foo;
```

## Module Info

```
Exports {
  No exports
}
Imports {
  No imports
}
```

## Registered types

```
Module TypeId(0) => Module(0) TypeId(1).initialised

Module TypeId(1) => instanceof Module(0) TypeId(9)

Module TypeId(2) => Module(0) TypeId(1).initialise

Module TypeId(3) => Call Module(0) TypeId(2)(No parameters)

Module TypeId(4) => string: foo

Module TypeId(5) => Module(0) TypeId(9)

Module TypeId(6) => instanceof Module(0) TypeId(5)

Module TypeId(7) => Module(0) TypeId(4)

Module TypeId(8) => sync Function "foo" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Module(0) TypeId(4)
}

Module TypeId(9) => class "Foo" {
  extends: none
  implements: []
  type_args: []
}
```
